# fapiao

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.context/prefs/: coding-style.md
openspec/changes/add-web-ui/: design.md  tasks.md
openspec/changes/add-web-ui/specs/web-ui-fastapi-spa/: spec.md
openspec/changes/archive/2026-05-08-add-web-ui/: proposal.md  tasks.md
openspec/changes/archive/2026-05-08-merge-invoice-order-images-pdf/: design.md  tasks.md
openspec/changes/merge-invoice-order-images-pdf/: proposal.md  tasks.md
openspec/specs/invoice-order-pdf-merge/: spec.md
scripts/: gen_samples.py
src/fapiao_pdf/: CLAUDE.md  classifier.py  cli.py  date_parser.py  image_io.py  layout.py  models.py  ocr.py  ordering.py  pdf_pages.py  pipeline.py  renderer.py  scanner.py  splitter.py  stats.py
src/fapiao_pdf/web/: CLAUDE.md  app.py  cleanup.py  config.py  errors.py  progress.py  queue.py  tasks.py
src/fapiao_pdf/web/static/: app.js  index.html  style.css
tests/: CLAUDE.md  test_classify_date_order.py  test_cli.py  test_cli_serve.py  test_layout.py  test_ocr.py  test_pipeline_e2e.py  test_scanner.py  test_splitter.py  test_stats.py  test_version.py  test_web_app.py  test_web_cleanup.py  test_web_config.py  test_web_errors.py  test_web_progress.py  test_web_properties.py  test_web_queue.py  test_web_restart.py  test_web_tasks.py
