[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "fapiao"
dynamic = ["version"]
description = "用于合并发票与订单票据 PDF 的命令行工具"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "paddleocr",
  "pymupdf",
  "pillow",
  "reportlab",
  "opencv-python-headless",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis",
  "httpx>=0.27,<1",
]

[project.scripts]
fapiao = "fapiao_pdf.cli:app"

[tool.hatch.version]
path = "src/fapiao_pdf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fapiao_pdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
